# BitFrame

./: .gitignore  CMakeLists.txt  README.md
agent/: CLAUDE.md
src/: main.c
src/MemoryManagement/: MemoryManagement.h
src/MemoryManagement/inc/: main_memory.h
src/MemoryManagement/src/: main_memory.c
src/Utils/: Utils.h
src/Utils/inc/: log_init.h
src/Utils/src/: log_init.c
test/log/: CMakeLists.txt  test_log.c
